[gd_scene load_steps=3 format=3 uid="uid://d2wnq8ai2ykus"]

[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/theme/menu_theme.tres" id="1_2t1ve"]
[ext_resource type="Script" uid="uid://dlkrwb25egyq" path="res://ui/settings/setting_vec2.gd" id="1_6vysa"]

[node name="SettingVec2" type="PanelContainer"]
texture_filter = 1
offset_right = 118.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_2t1ve")
script = ExtResource("1_6vysa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LabelName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingControl"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="LabelX" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x"

[node name="SpinBoxX" type="SpinBox" parent="HBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingControlVec2SpinBox"
step = 0.01
select_all_on_focus = true

[node name="LabelY" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "y"

[node name="SpinBoxY" type="SpinBox" parent="HBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"SettingControlVec2SpinBox"
step = 0.01
select_all_on_focus = true
